@@ -1,3 +1,10 @@
+2008-08-07  Christian Franke  <franke@computer.org>
+
+	* kern/i386/pit.c (TIMER2_SPEAKER): New define.
+	(TIMER2_GATE): Likewise.
+	(grub_pit_wait): Add enable/disable of the timer2 gate
+	bit of port 0x61.  This fixes a possible infinite loop.
+
 2008-08-07  Bean  <bean123ch@gmail.com>
 
 	* conf/x86_64-efi.rmk (kernel_mod_SOURCES): Add kern/time.c,
